Change Log

20171010 SCL	
- $SC remove bad code (*tokens[2] = 'N') ( should have been ==, not =)..
	was working properly, anyway, but didn't care what character was
	specified. just remove the clause altogether, and allow any 3rd
	arg to make current capacity volatile
- change $SC doc to [V] (volatile) instead of [N] for not saving to EEPROM 

20170922 SCL
- change "Resetting..." to "Restarting..."
	
vD4.10.1 20170921 SCL
- move inline string "Resetting" to strings.h/cpp
	
vD4.10.0 20170817 SCL
- change TMP007 temperature was showing up as 230 when not installed.
- also, temperature for other devices was 0 when not installed, but 0 is a
	valid temperature
	-> change all default temps to TEMPERATURE_NOT_INSTALLED (currently
	-2560)
	-> bump up RAPI version to 4.0.1
- when sleeping, and EV connected, set LCD backlight to white instead of violet
vD4.9.1 20170811 SCL
- added RAPI_FF - adds RAPI $FF command and deprecates all other enable/disable
	commands, i.e. SD/SE/SF/SG/SR/SV
	-> RAPIVER = 4.0.0
- $FF T 0|1 enable/disable temperature monitoring
- get rid of $S0 entirely, since it was half-baked and part of TEMPERATURE_MONITORING_NY
	
vD4.8.1 20170810 SCL
- fix buffer overflow bug in EvseRapiProcessor::tokenize() - limit tokenCnt to
	ESRAPI_MAX_ARGS
	
vD4.8.0 20170726 SCL
- RAPI $SO 0 0 disables temperature checking
- added RAPI $GD - get delay timer

	
vD4.7.2 20170725 SCL
- when setting charge/time limit via RAPI, display would not update lightning or clock icon
	
vD4.7.1 20170725 SCL
- fix bug in Service Level menu.. + sign would shift when AUTOSVCLEVEL enabled
	
vD4.7.0 20170504 SCL
- version number was wrong.. update from D4.6.1 -> D4.7.0
- doesn't make any difference, but improve readability
	Adafruit_TMP007::readObjTempC10() was returning NAN instead of 0
	when sensor not installed. Change to return 0
	
vD4.7.0 20170124 SCL
- check for proper tokenCnt $FB & $FP
- add RAPI $F0 - enable/display LCD update
	
vD4.6.0 20170119 SCL